<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_lavand"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/component_23" />

                <TextView
                    style="@style/b30"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="175dp"
                    android:text="@string/dian_lafayette"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    style="@style/semi15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/tap_here_to_add_your_bio"
                    android:textColor="@color/white">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/component_24" />

                <TextView
                    android:id="@+id/acc"
                    style="@style/semi20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_new"
                    android:textColor="@color/white">

                </TextView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/component_25" />

                    <TextView
                        style="@style/semi15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="120dp"
                        android:text="@string/sal"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/semi10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="110dp"
                        android:text="@string/_2019_2020"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/component_26" />

                    <TextView
                        style="@style/semi15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="120dp"
                        android:text="@string/halloween"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/semi10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="110dp"
                        android:text="@string/_2020"
                        android:textColor="@color/white" />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/component_27__1_" />

                    <TextView
                        style="@style/semi15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="120dp"
                        android:text="@string/roleplay"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/semi10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="110dp"
                        android:text="@string/_2019_2020"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:srcCompat="@drawable/component_28" />

                    <TextView
                        style="@style/semi15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="120dp"
                        android:text="@string/last_of_us"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/semi10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="110dp"
                        android:text="@string/_2021"
                        android:textColor="@color/white" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>