<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/meduim_lavand"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/component_29" />

                <TextView
                    style="@style/b35"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/create_portfolio"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="370dp"
                android:layout_height="550dp"
                app:srcCompat="@drawable/component" />

            <LinearLayout
                android:id="@+id/io"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/semi25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/white">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/lavand">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/semi20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/add_text"
                            android:textColor="@color/bright_lavand" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/semi25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/white">

                    </TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/lavand">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/semi20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/add_text"
                            android:textColor="@color/bright_lavand" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/io"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    style="@style/semi25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"

                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="325dp"
                android:orientation="horizontal"
                android:id="@+id/io1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@color/lavand">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/semi20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/start"
                        android:textColor="@color/bright_lavand" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:background="@color/lavand">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/semi20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/finish"
                        android:textColor="@color/bright_lavand" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/io1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/semi25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pictures"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="440dp"
                android:layout_marginLeft="20dp"
                >

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/meduim_lavand"
                    android:text="@string/add_pic"
                    style="@style/semi15"
                    android:textColor="@color/bright_lavand"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    app:srcCompat="@drawable/component_29__1_" />
            </LinearLayout>




        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>