<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky_blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/pink_lavand"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/n15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/search"
                    android:textColor="@color/cool_lavand" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp">

            <TextView
                style="@style/b25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="@color/cold_purple"></TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/graphic"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/photography"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/motion"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/fashion"
                    android:textColor="@color/pink_lavand" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/graphic"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/photography"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/motion"
                    android:textColor="@color/pink_lavand" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/pale_lavand"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/fashion"
                    android:textColor="@color/pink_lavand" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/component_10" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>